tests/derive_ui/value_enum_non_unit.stderr
error: `#[derive(ValueEnum)]` only supports unit variants. Non-unit variants must be skipped
 --> tests/derive_ui/value_enum_non_unit.rs:5:5
  |
5 |     Foo(usize),
  |     ^^^
